# printing-app

./: .gitignore  .vercelignore  BUILD_APK_ON_COLAB.ipynb  Dockerfile  build.bat  build_portable.bat  install_termux.sh  main.py  printing_app.db  pyproject.toml  railway.json  render.yaml  run.bat  run_web.bat  run_web.py  run_web_app.py  start.sh  vercel.json  web_app.spec  تشغيل cmd.txt
.github/workflows/: build-apk.yml  deploy-whatsapp.yml
database/: db_manager.py
gui/: main_window.py
mobile_app/: main.py  requirements.txt
resources/: styles.qss
web_app/: Dockerfile  Procfile  app.py  render.yaml
web_app/static/: make_icons.py  manifest.json  style.css  sw.js
web_app/templates/: base.html  customers.html  dashboard.html  inquiries.html  inventory.html  login.html  products.html  sales.html  settings.html  settings_login.html
whatsapp_server/: Dockerfile  package-lock.json  package.json  render.yaml  server.js
whatsapp_server/.wwebjs_test/session/Default/: DIPS-wal
whatsapp_server/.wwebjs_test/session/Default/Extension Rules/: LOG
whatsapp_server/.wwebjs_test/session/Default/Extension Scripts/: LOG
whatsapp_server/.wwebjs_test/session/Default/Extension State/: LOG
whatsapp_server/.wwebjs_test/session/Default/GCM Store/: LOG
whatsapp_server/.wwebjs_test/session/Default/Sessions/: Session_13427634258554482
whatsapp_server/.wwebjs_test/session/Default/WebStorage/: QuotaManager  QuotaManager-journal
whatsapp_server/.wwebjs_test2/session/Default/: DIPS-wal
whatsapp_server/.wwebjs_test3/session/Default/: DIPS-wal
(+31 files in other folders)
